--- a/notebooks/basic_python.ipynb
+++ b/notebooks/basic_python.ipynb
@@ -24,7 +24,7 @@
    ],
    "source": [
     "import numpy as np\n",
-    "print \"Loading package(s)\""
+    "print (\"Loading package(s)\")"
    ]
   },
   {
@@ -45,9 +45,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, world.\n",
       "Hello, world\n",
-      "\n",
       "Integer: 3, 03, 003, 0003, 00003\n",
       "Float: 123, 123.5, 123.46, 123.46, 123.46\n",
       "String: [Hello, world], [Hello, world], [        Hello, world]\n"
@@ -55,23 +53,18 @@
     }
    ],
    "source": [
-    "# The most simple print function usage. \n",
-    "print \"Hello, world.\"\n",
-    "# In python3, we should use () for printing. (Not in Python2)\n",
     "print (\"Hello, world\")\n",
-    "# But for unity, we will use a paranthesis \n",
-    "print (\"\")\n",
     "\n",
-    "# There are several important types in Pyhton. \n",
-    "# 1. Integer\n",
+    "# THERE ARE THREE POPULAR TYPES\n",
+    "# 1. INTEGER\n",
     "x = 3;\n",
     "print (\"Integer: %01d, %02d, %03d, %04d, %05d\" \n",
     "       % (x, x, x, x, x))\n",
-    "# 2. Float\n",
+    "# 2. FLOAT\n",
     "x = 123.456;\n",
     "print (\"Float: %.0f, %.1f, %.2f, %1.2f, %2.2f\" \n",
     "       % (x, x, x, x, x))\n",
-    "# 3. String\n",
+    "# 3. STRING\n",
     "x = \"Hello, world\"\n",
     "print (\"String: [%s], [%3s], [%20s]\" \n",
     "       % (x, x, x))"
@@ -404,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -1179,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -1204,10 +1197,10 @@
       "Type is <type 'numpy.ndarray'>\n",
       "Shape is (4, 3)\n",
       "Values are: \n",
-      "[[0 0 0]\n",
-      " [0 0 0]\n",
-      " [0 0 0]\n",
-      " [0 0 0]]\n",
+      "[[ 1  2  3]\n",
+      " [ 4  5  6]\n",
+      " [ 7  8  9]\n",
+      " [10 11 12]]\n",
       "\n"
      ]
     }
