--- a/notebooks/logistic_regression_mnist.ipynb
+++ b/notebooks/logistic_regression_mnist.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Logistic Regression with MNIST"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -16,10 +23,6 @@
     }
    ],
    "source": [
-    "\"\"\"\n",
-    " Logistic Regression with MNIST\n",
-    " @Sungjoon Choi (sungjoon.choi@cpslab.snu.ac.kr)\n",
-    "\"\"\"\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
@@ -28,8 +31,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Download and Extract MNIST dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -47,7 +57,6 @@
     }
    ],
    "source": [
-    "# Download and Extract MNIST dataset\n",
     "mnist      = input_data.read_data_sets('data/', one_hot=True)\n",
     "trainimg   = mnist.train.images\n",
     "trainlabel = mnist.train.labels\n",
@@ -58,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -105,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -115,18 +124,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 000/050 cost: 1.172071438 train_acc: 0.840\n",
-      "Epoch: 005/050 cost: 0.440569847 train_acc: 0.870\n",
-      "Epoch: 010/050 cost: 0.379107168 train_acc: 0.900\n",
-      "Epoch: 015/050 cost: 0.354556558 train_acc: 0.870\n",
-      "Epoch: 020/050 cost: 0.347562262 train_acc: 0.910\n",
-      "Epoch: 025/050 cost: 0.328015022 train_acc: 0.930\n",
-      "Epoch: 030/050 cost: 0.319817915 train_acc: 0.880\n",
-      "Epoch: 035/050 cost: 0.313707087 train_acc: 0.890\n",
-      "Epoch: 040/050 cost: 0.310373813 train_acc: 0.910\n",
-      "Epoch: 045/050 cost: 0.305763753 train_acc: 0.940\n",
+      "Epoch: 000/050 cost: 1.171094928 train_acc: 0.810 test_acc: 0.853\n",
+      "Epoch: 005/050 cost: 0.436032443 train_acc: 0.880 test_acc: 0.895\n",
+      "Epoch: 010/050 cost: 0.386913695 train_acc: 0.880 test_acc: 0.905\n",
+      "Epoch: 015/050 cost: 0.356831038 train_acc: 0.920 test_acc: 0.909\n",
+      "Epoch: 020/050 cost: 0.344196703 train_acc: 0.880 test_acc: 0.912\n",
+      "Epoch: 025/050 cost: 0.329408237 train_acc: 0.900 test_acc: 0.914\n",
+      "Epoch: 030/050 cost: 0.325165422 train_acc: 0.910 test_acc: 0.916\n",
+      "Epoch: 035/050 cost: 0.314166845 train_acc: 0.930 test_acc: 0.917\n",
+      "Epoch: 040/050 cost: 0.307190302 train_acc: 0.910 test_acc: 0.918\n",
+      "Epoch: 045/050 cost: 0.296967669 train_acc: 0.910 test_acc: 0.918\n",
       "Optimization Finished!\n",
-      "('Accuracy:', 0.91900009)\n",
+      "('Accuracy:', 0.91900015)\n",
       "Done.\n"
      ]
     }
@@ -159,8 +168,9 @@
     "        # Display logs per epoch step\n",
     "        if epoch % display_step == 0:\n",
     "            train_acc = accr.eval({x: batch_xs, y: batch_ys})\n",
-    "            print (\"Epoch: %03d/%03d cost: %.9f train_acc: %.3f\" \n",
-    "                   % (epoch, training_epochs, avg_cost, train_acc))\n",
+    "            test_acc = accr.eval({x: mnist.test.images, y: mnist.test.labels})\n",
+    "            print (\"Epoch: %03d/%03d cost: %.9f train_acc: %.3f test_acc: %.3f\" \n",
+    "                   % (epoch, training_epochs, avg_cost, train_acc, test_acc))\n",
     "\n",
     "    print (\"Optimization Finished!\")\n",
     "\n",
