--- a/notebooks/mlp_mnist_simple.ipynb
+++ b/notebooks/mlp_mnist_simple.ipynb
@@ -24,6 +24,7 @@
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
     "from tensorflow.examples.tutorials.mnist import input_data\n",
+    "\n",
     "%matplotlib inline  \n",
     "print (\"Packs loaded.\")"
    ]
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -138,26 +139,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 000/010 cost: 1.711890423\n",
-      "Training accuracy: 0.920\n",
-      "Epoch: 001/010 cost: 1.547516098\n",
-      "Training accuracy: 0.940\n",
-      "Epoch: 002/010 cost: 1.520475427\n",
-      "Training accuracy: 0.970\n",
-      "Epoch: 003/010 cost: 1.507395148\n",
+      "Epoch: 000/010 cost: 1.710917208\n",
+      "Training accuracy: 0.930\n",
+      "Test accuracy: 0.911\n",
+      "Epoch: 001/010 cost: 1.544890469\n",
+      "Training accuracy: 0.930\n",
+      "Test accuracy: 0.933\n",
+      "Epoch: 002/010 cost: 1.520105678\n",
       "Training accuracy: 0.960\n",
-      "Epoch: 004/010 cost: 1.498943900\n",
+      "Test accuracy: 0.945\n",
+      "Epoch: 003/010 cost: 1.506742131\n",
+      "Training accuracy: 0.960\n",
+      "Test accuracy: 0.954\n",
+      "Epoch: 004/010 cost: 1.497843306\n",
       "Training accuracy: 0.970\n",
-      "Epoch: 005/010 cost: 1.492500064\n",
-      "Training accuracy: 0.980\n",
-      "Epoch: 006/010 cost: 1.487684276\n",
-      "Training accuracy: 0.970\n",
-      "Epoch: 007/010 cost: 1.483670984\n",
+      "Test accuracy: 0.959\n",
+      "Epoch: 005/010 cost: 1.491715848\n",
+      "Training accuracy: 0.990\n",
+      "Test accuracy: 0.963\n",
+      "Epoch: 006/010 cost: 1.486772999\n",
+      "Training accuracy: 0.960\n",
+      "Test accuracy: 0.966\n",
+      "Epoch: 007/010 cost: 1.483362348\n",
       "Training accuracy: 1.000\n",
-      "Epoch: 008/010 cost: 1.480636489\n",
-      "Training accuracy: 0.980\n",
-      "Epoch: 009/010 cost: 1.478165924\n",
+      "Test accuracy: 0.970\n",
+      "Epoch: 008/010 cost: 1.480253498\n",
+      "Training accuracy: 0.990\n",
+      "Test accuracy: 0.971\n",
+      "Epoch: 009/010 cost: 1.477486276\n",
       "Training accuracy: 1.000\n",
+      "Test accuracy: 0.973\n",
       "Optimization Finished!\n"
      ]
     }
@@ -183,6 +194,8 @@
     "        print (\"Epoch: %03d/%03d cost: %.9f\" % (epoch, training_epochs, avg_cost))\n",
     "        train_acc = sess.run(accr, feed_dict={x: batch_xs, y: batch_ys})\n",
     "        print (\"Training accuracy: %.3f\" % (train_acc))\n",
+    "        test_acc = sess.run(accr, feed_dict={x: mnist.test.images, y: mnist.test.labels})\n",
+    "        print (\"Test accuracy: %.3f\" % (test_acc))\n",
     "\n",
     "print (\"Optimization Finished!\")\n"
    ]
@@ -198,7 +211,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training accuracy: 0.974\n"
+      "Training accuracy: 0.973\n"
      ]
     }
    ],
