--- a/notebooks/cae_mnist.ipynb
+++ b/notebooks/cae_mnist.ipynb
@@ -88,8 +88,17 @@
     "    'bd3': tf.Variable(tf.random_normal([n2], stddev=0.1)),\n",
     "    'bd2': tf.Variable(tf.random_normal([n1], stddev=0.1)),\n",
     "    'bd1': tf.Variable(tf.random_normal([1],  stddev=0.1))\n",
-    "}\n",
-    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "def cae(_X, _W, _b, _keepprob):\n",
     "    _input_r = tf.reshape(_X, shape=[-1, 28, 28, 1])\n",
     "    # Encoder\n",
