--- a/notebooks/cnn_customdata_basic.ipynb
+++ b/notebooks/cnn_customdata_basic.ipynb
@@ -49,7 +49,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['trainlabel', 'trainimg', 'imgsize', 'testimg', 'testlabel']\n",
+      "['trainlabel', 'imgsize', 'trainimg', 'testimg', 'testlabel', 'use_gray']\n",
       "52 train images loaded\n",
       "35 test images loaded\n",
       "4096 dimensional input\n",
@@ -61,7 +61,7 @@
    "source": [
     "# Load them!\n",
     "cwd = os.getcwd()\n",
-    "loadpath = cwd + \"/data/data_gray.npz\"\n",
+    "loadpath = cwd + \"/data/custom_data.npz\"\n",
     "l = np.load(loadpath)\n",
     "\n",
     "# See what's in here\n",
@@ -73,6 +73,7 @@
     "testimg = l['testimg']\n",
     "testlabel = l['testlabel']\n",
     "imgsize = l['imgsize']\n",
+    "use_gray = l['use_gray']\n",
     "ntrain = trainimg.shape[0]\n",
     "nclass = trainlabel.shape[1]\n",
     "dim    = trainimg.shape[1]\n",
@@ -97,6 +98,41 @@
    "metadata": {
     "collapsed": false
    },
+   "outputs": [],
+   "source": [
+    "tf.set_random_seed(0)\n",
+    "n_input  = dim\n",
+    "n_output = nclass\n",
+    "if use_gray:\n",
+    "    weights  = {\n",
+    "        'wc1': tf.Variable(tf.random_normal([5, 5, 1, 128], stddev=0.1)),\n",
+    "        'wc2': tf.Variable(tf.random_normal([5, 5, 128, 128], stddev=0.1)),\n",
+    "        'wd1': tf.Variable(tf.random_normal(\n",
+    "                [(int)(imgsize[0]/4*imgsize[1]/4)*128, 128], stddev=0.1)),\n",
+    "        'wd2': tf.Variable(tf.random_normal([128, n_output], stddev=0.1))\n",
+    "    }\n",
+    "else:\n",
+    "    weights  = {\n",
+    "        'wc1': tf.Variable(tf.random_normal([5, 5, 3, 128], stddev=0.1)),\n",
+    "        'wc2': tf.Variable(tf.random_normal([5, 5, 128, 128], stddev=0.1)),\n",
+    "        'wd1': tf.Variable(tf.random_normal(\n",
+    "                [(int)(imgsize[0]/4*imgsize[1]/4)*128, 128], stddev=0.1)),\n",
+    "        'wd2': tf.Variable(tf.random_normal([128, n_output], stddev=0.1))\n",
+    "    }\n",
+    "biases   = {\n",
+    "    'bc1': tf.Variable(tf.random_normal([128], stddev=0.1)),\n",
+    "    'bc2': tf.Variable(tf.random_normal([128], stddev=0.1)),\n",
+    "    'bd1': tf.Variable(tf.random_normal([128], stddev=0.1)),\n",
+    "    'bd2': tf.Variable(tf.random_normal([n_output], stddev=0.1))\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -107,25 +143,12 @@
     }
    ],
    "source": [
-    "tf.set_random_seed(0)\n",
-    "n_input  = dim\n",
-    "n_output = nclass\n",
-    "weights  = {\n",
-    "    'wc1': tf.Variable(tf.random_normal([5, 5, 1, 128], stddev=0.1)),\n",
-    "    'wc2': tf.Variable(tf.random_normal([5, 5, 128, 128], stddev=0.1)),\n",
-    "    'wd1': tf.Variable(tf.random_normal(\n",
-    "            [(int)(imgsize[0]/4*imgsize[1]/4)*128, 128], stddev=0.1)),\n",
-    "    'wd2': tf.Variable(tf.random_normal([128, n_output], stddev=0.1))\n",
-    "}\n",
-    "biases   = {\n",
-    "    'bc1': tf.Variable(tf.random_normal([128], stddev=0.1)),\n",
-    "    'bc2': tf.Variable(tf.random_normal([128], stddev=0.1)),\n",
-    "    'bd1': tf.Variable(tf.random_normal([128], stddev=0.1)),\n",
-    "    'bd2': tf.Variable(tf.random_normal([n_output], stddev=0.1))\n",
-    "}\n",
-    "def conv_basic(_input, _w, _b, _keepratio):\n",
+    "def conv_basic(_input, _w, _b, _keepratio, _use_gray):\n",
     "    # INPUT\n",
-    "    _input_r = tf.reshape(_input, shape=[-1, imgsize[0], imgsize[1], 1])\n",
+    "    if _use_gray:\n",
+    "        _input_r = tf.reshape(_input, shape=[-1, imgsize[0], imgsize[1], 1])\n",
+    "    else:\n",
+    "        _input_r = tf.reshape(_input, shape=[-1, imgsize[0], imgsize[1], 3])\n",
     "    # CONVOLUTION LAYER 1\n",
     "    _conv1 = tf.nn.relu(tf.nn.bias_add(tf.nn.conv2d(_input_r\n",
     "        , _w['wc1'], strides=[1, 1, 1, 1], padding='SAME'), _b['bc1']))\n",
@@ -166,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -186,7 +209,7 @@
     "keepratio = tf.placeholder(tf.float32)\n",
     "\n",
     "# Functions! \n",
-    "_pred = conv_basic(x, weights, biases, keepratio)['out']\n",
+    "_pred = conv_basic(x, weights, biases, keepratio, use_gray)['out']\n",
     "cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(_pred, y))\n",
     "WEIGHT_DECAY_FACTOR = 0.0001\n",
     "l2_loss = tf.add_n([tf.nn.l2_loss(v) \n",
@@ -208,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -218,39 +241,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 000/400 cost: 47.848384857\n",
-      " Training accuracy: 0.480\n",
-      " Test accuracy: 0.600\n",
-      "Epoch: 040/400 cost: 2.781695843\n",
-      " Training accuracy: 0.690\n",
-      " Test accuracy: 0.714\n",
-      "Epoch: 080/400 cost: 2.510058403\n",
-      " Training accuracy: 0.880\n",
-      " Test accuracy: 0.800\n",
-      "Epoch: 120/400 cost: 2.164654016\n",
-      " Training accuracy: 0.980\n",
-      " Test accuracy: 0.886\n",
-      "Epoch: 160/400 cost: 2.019604206\n",
-      " Training accuracy: 1.000\n",
-      " Test accuracy: 0.829\n",
-      "Epoch: 200/400 cost: 1.963329792\n",
-      " Training accuracy: 1.000\n",
-      " Test accuracy: 0.829\n",
-      "Epoch: 240/400 cost: 1.923812628\n",
-      " Training accuracy: 1.000\n",
+      "Epoch: 000/400 cost: 47.541362762\n",
+      " Training accuracy: 0.570\n",
+      " Test accuracy: 0.571\n",
+      "Epoch: 040/400 cost: 2.740294933\n",
+      " Training accuracy: 0.750\n",
       " Test accuracy: 0.771\n",
-      "Epoch: 280/400 cost: 1.870155334\n",
+      "Epoch: 080/400 cost: 2.279308319\n",
       " Training accuracy: 1.000\n",
-      " Test accuracy: 0.829\n",
-      "Epoch: 320/400 cost: 1.830017805\n",
+      " Test accuracy: 0.686\n",
+      "Epoch: 120/400 cost: 2.104738235\n",
       " Training accuracy: 1.000\n",
-      " Test accuracy: 0.829\n",
-      "Epoch: 360/400 cost: 1.793158174\n",
+      " Test accuracy: 0.800\n",
+      "Epoch: 160/400 cost: 2.045626879\n",
       " Training accuracy: 1.000\n",
-      " Test accuracy: 0.829\n",
-      "Epoch: 399/400 cost: 1.750298500\n",
+      " Test accuracy: 0.857\n",
+      "Epoch: 200/400 cost: 2.002781868\n",
       " Training accuracy: 1.000\n",
-      " Test accuracy: 0.829\n",
+      " Test accuracy: 0.743\n",
+      "Epoch: 240/400 cost: 1.962353945\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.857\n",
+      "Epoch: 280/400 cost: 1.923374057\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.857\n",
+      "Epoch: 320/400 cost: 1.886320949\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.800\n",
+      "Epoch: 360/400 cost: 1.850687742\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.800\n",
+      "Epoch: 399/400 cost: 1.817864180\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.886\n",
       "Optimization Finished!\n"
      ]
     }
@@ -305,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
