--- a/notebooks/logistic_regression_customdata.ipynb
+++ b/notebooks/logistic_regression_customdata.ipynb
@@ -48,7 +48,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['trainlabel', 'trainimg', 'imgsize', 'testimg', 'testlabel']\n",
+      "['trainlabel', 'imgsize', 'trainimg', 'testimg', 'testlabel', 'use_gray']\n",
       "52 train images loaded\n",
       "35 test images loaded\n",
       "4096 dimensional input\n",
@@ -59,7 +59,7 @@
    "source": [
     "# Load them!\n",
     "cwd = os.getcwd()\n",
-    "loadpath = cwd + \"/data/data_gray.npz\"\n",
+    "loadpath = cwd + \"/data/custom_data.npz\"\n",
     "l = np.load(loadpath)\n",
     "\n",
     "# See what's in here\n",
@@ -70,6 +70,7 @@
     "trainlabel = l['trainlabel']\n",
     "testimg = l['testimg']\n",
     "testlabel = l['testlabel']\n",
+    "use_gray = l['use_gray']\n",
     "ntrain = trainimg.shape[0]\n",
     "nclass = trainlabel.shape[1]\n",
     "dim    = trainimg.shape[1]\n",
@@ -166,34 +167,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 000/1000 cost: 0.655641246\n",
-      " Training accuracy: 0.500\n",
-      " Test accuracy: 0.600\n",
-      "Epoch: 100/1000 cost: 0.400630432\n",
+      "Epoch: 000/1000 cost: 0.626751423\n",
+      " Training accuracy: 0.600\n",
+      " Test accuracy: 0.686\n",
+      "Epoch: 100/1000 cost: 0.438359487\n",
+      " Training accuracy: 0.800\n",
+      " Test accuracy: 0.714\n",
+      "Epoch: 200/1000 cost: 0.367508155\n",
+      " Training accuracy: 0.900\n",
+      " Test accuracy: 0.686\n",
+      "Epoch: 300/1000 cost: 0.363990796\n",
       " Training accuracy: 1.000\n",
-      " Test accuracy: 0.543\n",
-      "Epoch: 200/1000 cost: 0.390560913\n",
-      " Training accuracy: 1.000\n",
-      " Test accuracy: 0.629\n",
-      "Epoch: 300/1000 cost: 0.404686832\n",
-      " Training accuracy: 1.000\n",
-      " Test accuracy: 0.657\n",
-      "Epoch: 400/1000 cost: 0.325484300\n",
-      " Training accuracy: 1.000\n",
-      " Test accuracy: 0.657\n",
-      "Epoch: 500/1000 cost: 0.354181266\n",
-      " Training accuracy: 1.000\n",
-      " Test accuracy: 0.629\n",
-      "Epoch: 600/1000 cost: 0.395351899\n",
-      " Training accuracy: 1.000\n",
-      " Test accuracy: 0.543\n",
-      "Epoch: 700/1000 cost: 0.407497895\n",
+      " Test accuracy: 0.714\n",
+      "Epoch: 400/1000 cost: 0.406193763\n",
+      " Training accuracy: 0.900\n",
+      " Test accuracy: 0.714\n",
+      "Epoch: 500/1000 cost: 0.400928861\n",
+      " Training accuracy: 0.900\n",
+      " Test accuracy: 0.714\n",
+      "Epoch: 600/1000 cost: 0.366956294\n",
+      " Training accuracy: 0.900\n",
+      " Test accuracy: 0.686\n",
+      "Epoch: 700/1000 cost: 0.334192312\n",
       " Training accuracy: 1.000\n",
       " Test accuracy: 0.686\n",
-      "Epoch: 800/1000 cost: 0.373689485\n",
+      "Epoch: 800/1000 cost: 0.392353541\n",
       " Training accuracy: 1.000\n",
-      " Test accuracy: 0.600\n",
-      "Epoch: 900/1000 cost: 0.366497642\n",
+      " Test accuracy: 0.714\n",
+      "Epoch: 900/1000 cost: 0.383330226\n",
       " Training accuracy: 1.000\n",
       " Test accuracy: 0.714\n",
       "Optimization Finished!\n"
