--- a/notebooks/mlp_customdata_basic.ipynb
+++ b/notebooks/mlp_customdata_basic.ipynb
@@ -49,7 +49,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['trainlabel', 'trainimg', 'imgsize', 'testimg', 'testlabel']\n",
+      "['trainlabel', 'imgsize', 'trainimg', 'testimg', 'testlabel', 'use_gray']\n",
       "52 train images loaded\n",
       "35 test images loaded\n",
       "4096 dimensional input\n",
@@ -61,7 +61,7 @@
    "source": [
     "# Load them!\n",
     "cwd = os.getcwd()\n",
-    "loadpath = cwd + \"/data/data_gray.npz\"\n",
+    "loadpath = cwd + \"/data/custom_data.npz\"\n",
     "l = np.load(loadpath)\n",
     "\n",
     "# See what's in here\n",
@@ -201,34 +201,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 000/200 cost: 1.290193915\n",
+      "Epoch: 000/200 cost: 0.970680833\n",
+      " Training accuracy: 0.712\n",
+      " Test accuracy: 0.571\n",
+      "Epoch: 020/200 cost: 0.493623555\n",
       " Training accuracy: 0.692\n",
       " Test accuracy: 0.629\n",
-      "Epoch: 020/200 cost: 0.429746449\n",
-      " Training accuracy: 0.885\n",
-      " Test accuracy: 0.743\n",
-      "Epoch: 040/200 cost: 0.305125207\n",
-      " Training accuracy: 0.788\n",
+      "Epoch: 040/200 cost: 0.287716269\n",
+      " Training accuracy: 0.942\n",
+      " Test accuracy: 0.657\n",
+      "Epoch: 060/200 cost: 0.193796426\n",
+      " Training accuracy: 0.942\n",
+      " Test accuracy: 0.657\n",
+      "Epoch: 080/200 cost: 0.109673880\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.657\n",
+      "Epoch: 100/200 cost: 0.049238473\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.771\n",
+      "Epoch: 120/200 cost: 0.020868767\n",
+      " Training accuracy: 1.000\n",
       " Test accuracy: 0.686\n",
-      "Epoch: 060/200 cost: 0.145190075\n",
-      " Training accuracy: 0.962\n",
-      " Test accuracy: 0.714\n",
-      "Epoch: 080/200 cost: 0.068079025\n",
+      "Epoch: 140/200 cost: 0.017780855\n",
       " Training accuracy: 1.000\n",
-      " Test accuracy: 0.771\n",
-      "Epoch: 100/200 cost: 0.044361372\n",
+      " Test accuracy: 0.800\n",
+      "Epoch: 160/200 cost: 0.007553000\n",
       " Training accuracy: 1.000\n",
-      " Test accuracy: 0.771\n",
-      "Epoch: 120/200 cost: 0.026328333\n",
-      " Training accuracy: 1.000\n",
-      " Test accuracy: 0.771\n",
-      "Epoch: 140/200 cost: 0.017280519\n",
-      " Training accuracy: 1.000\n",
-      " Test accuracy: 0.771\n",
-      "Epoch: 160/200 cost: 0.006928252\n",
-      " Training accuracy: 1.000\n",
-      " Test accuracy: 0.743\n",
-      "Epoch: 180/200 cost: 0.008961238\n",
+      " Test accuracy: 0.657\n",
+      "Epoch: 180/200 cost: 0.005044871\n",
       " Training accuracy: 1.000\n",
       " Test accuracy: 0.743\n",
       "Optimization Finished!\n"
