--- a/notebooks/vis_mlp_mnist.ipynb
+++ b/notebooks/vis_mlp_mnist.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MLP with TensorBoard"
+    "# Visualizing MNIST + Summary"
    ]
   },
   {
@@ -217,21 +217,21 @@
      "output_type": "stream",
      "text": [
       "Start!\n",
-      "Epoch: 000/010 cost: 0.473336121\n",
+      "Epoch: 000/010 cost: 0.456668414\n",
       " Training accuracy: 0.950\n",
-      " Test accuracy: 0.932\n",
-      "Epoch: 002/010 cost: 0.114191625\n",
-      " Training accuracy: 0.970\n",
-      " Test accuracy: 0.965\n",
-      "Epoch: 004/010 cost: 0.074626958\n",
-      " Training accuracy: 0.970\n",
-      " Test accuracy: 0.971\n",
-      "Epoch: 006/010 cost: 0.051695831\n",
-      " Training accuracy: 1.000\n",
-      " Test accuracy: 0.975\n",
-      "Epoch: 008/010 cost: 0.039800433\n",
+      " Test accuracy: 0.934\n",
+      "Epoch: 002/010 cost: 0.114907353\n",
+      " Training accuracy: 0.980\n",
+      " Test accuracy: 0.966\n",
+      "Epoch: 004/010 cost: 0.072722287\n",
+      " Training accuracy: 0.980\n",
+      " Test accuracy: 0.973\n",
+      "Epoch: 006/010 cost: 0.051551444\n",
       " Training accuracy: 0.990\n",
-      " Test accuracy: 0.978\n",
+      " Test accuracy: 0.975\n",
+      "Epoch: 008/010 cost: 0.039778697\n",
+      " Training accuracy: 0.980\n",
+      " Test accuracy: 0.976\n",
       "Optimization Finished!\n"
      ]
     }
