--- a/notebooks/vis_logistic_regression_mnist.ipynb
+++ b/notebooks/vis_logistic_regression_mnist.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualizing Logistic Regression"
+    "# Visualizing Logistic Regression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -34,8 +34,17 @@
     "trainimg   = mnist.train.images\n",
     "trainlabel = mnist.train.labels\n",
     "testimg    = mnist.test.images\n",
-    "testlabel  = mnist.test.labels\n",
-    "\n",
+    "testlabel  = mnist.test.labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "# Parameters of Logistic Regression\n",
     "learning_rate   = 0.01\n",
     "training_epochs = 20\n",
@@ -59,8 +68,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Launch the graph"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sess = tf.Session()\n",
+    "sess.run(init)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Summary writer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -69,22 +104,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 000/020 cost: 1.174349074 train_acc: 0.870\n",
-      "Epoch: 005/020 cost: 0.443016567 train_acc: 0.890\n",
-      "Epoch: 010/020 cost: 0.386667603 train_acc: 0.900\n",
-      "Epoch: 015/020 cost: 0.357187883 train_acc: 0.910\n",
-      "Optimization Finished!\n",
-      "Test Accuracy: 0.912\n"
+      "Summary writer ready\n"
      ]
     }
    ],
    "source": [
-    "# Launch the graph\n",
-    "sess = tf.Session()\n",
-    "sess.run(init)\n",
-    "summary_writer = tf.train.SummaryWriter('/tmp/tf_logs/logistic_regression_mnist', graph=sess.graph)\n",
-    "\n",
-    "# Training cycle\n",
+    "summary_path = '/tmp/tf_logs/logistic_regression_mnist'\n",
+    "summary_writer = tf.train.SummaryWriter(summary_path, graph=sess.graph)\n",
+    "print (\"Summary writer ready\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 000/020 cost: 1.175680572 train_acc: 0.840\n",
+      "Epoch: 005/020 cost: 0.441145847 train_acc: 0.950\n",
+      "Epoch: 010/020 cost: 0.385325512 train_acc: 0.860\n",
+      "Epoch: 015/020 cost: 0.358649362 train_acc: 0.920\n",
+      "Optimization Finished!\n",
+      "Test Accuracy: 0.911\n"
+     ]
+    }
+   ],
+   "source": [
     "for epoch in range(training_epochs):\n",
     "    avg_cost = 0.\n",
     "    num_batch = int(mnist.train.num_examples/batch_size)\n",
@@ -93,7 +150,6 @@
     "        randidx  = np.random.randint(trainimg.shape[0], size=batch_size)\n",
     "        batch_xs = trainimg[randidx, :]\n",
     "        batch_ys = trainlabel[randidx, :]                \n",
-    "\n",
     "        # Fit training using batch data\n",
     "        sess.run(optm, feed_dict={x: batch_xs, y: batch_ys})\n",
     "        # Compute average loss\n",
@@ -110,7 +166,7 @@
     "# Test model\n",
     "# Calculate accuracy\n",
     "test_acc = sess.run(accr, feed_dict={x: testimg, y: testlabel})\n",
-    "print ((\"Test Accuracy: %.3f\") % (test_acc))\n"
+    "print ((\"Test Accuracy: %.3f\") % (test_acc))"
    ]
   },
   {
