--- a/notebooks/vis_cnn_mnist.ipynb
+++ b/notebooks/vis_cnn_mnist.ipynb
@@ -4,14 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CNN with TensorBoard"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Import packages"
+    "# Visualizing CNN + Summary"
    ]
   },
   {
@@ -61,15 +54,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Network ready\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Parameters\n",
     "learning_rate   = 0.001\n",
@@ -93,7 +78,25 @@
     "        'bc2': tf.Variable(tf.random_normal([128], stddev=0.1)),\n",
     "        'bd1': tf.Variable(tf.random_normal([1024], stddev=0.1)),\n",
     "        'bd2': tf.Variable(tf.random_normal([n_output], stddev=0.1))\n",
-    "    }\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Network ready\n"
+     ]
+    }
+   ],
+   "source": [
     "def conv_basic(_input, _w, _b, _keepratio):\n",
     "    # Input\n",
     "    with tf.variable_scope(\"INPUT_LAYER\"):\n",
@@ -142,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -180,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -216,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -226,20 +229,20 @@
      "output_type": "stream",
      "text": [
       "Start!\n",
-      "Epoch: 000/005 cost: 0.304427172\n",
+      "Epoch: 000/005 cost: 0.318147133\n",
       " Training accuracy: 0.990\n",
-      " Test accuracy: 0.981\n",
-      "Epoch: 001/005 cost: 0.048057067\n",
+      " Test accuracy: 0.979\n",
+      "Epoch: 001/005 cost: 0.050988509\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.987\n",
+      "Epoch: 002/005 cost: 0.032410927\n",
       " Training accuracy: 0.990\n",
-      " Test accuracy: 0.988\n",
-      "Epoch: 002/005 cost: 0.030249877\n",
-      " Training accuracy: 0.990\n",
+      " Test accuracy: 0.989\n",
+      "Epoch: 003/005 cost: 0.024957376\n",
+      " Training accuracy: 0.970\n",
       " Test accuracy: 0.990\n",
-      "Epoch: 003/005 cost: 0.022841267\n",
-      " Training accuracy: 0.990\n",
-      " Test accuracy: 0.990\n",
-      "Epoch: 004/005 cost: 0.017701065\n",
-      " Training accuracy: 0.990\n",
+      "Epoch: 004/005 cost: 0.019208626\n",
+      " Training accuracy: 1.000\n",
       " Test accuracy: 0.990\n",
       "Optimization Finished.\n"
      ]
