--- a/notebooks/vis_logistic_regression_mnist.ipynb
+++ b/notebooks/vis_logistic_regression_mnist.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -38,8 +38,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Define the graph"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -59,9 +66,8 @@
     "\n",
     "# Activation, Cost, and Optimizing functions\n",
     "pred = tf.nn.softmax(tf.matmul(x, W) + b) # Softmax\n",
-    "\n",
-    "cost = tf.reduce_mean(-tf.reduce_sum(y*tf.log(pred), reduction_indices=1)) # Cross entropy\n",
-    "optm = tf.train.GradientDescentOptimizer(learning_rate).minimize(cost) # Gradient Descent\n",
+    "cost = tf.reduce_mean(-tf.reduce_sum(y*tf.log(pred), reduction_indices=1))\n",
+    "optm = tf.train.GradientDescentOptimizer(learning_rate).minimize(cost) \n",
     "corr = tf.equal(tf.argmax(pred, 1), tf.argmax(y, 1))    \n",
     "accr = tf.reduce_mean(tf.cast(corr, \"float\"))\n",
     "init = tf.initialize_all_variables()"
@@ -76,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -95,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -123,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -132,10 +138,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 000/020 cost: 1.175680572 train_acc: 0.840\n",
-      "Epoch: 005/020 cost: 0.441145847 train_acc: 0.950\n",
-      "Epoch: 010/020 cost: 0.385325512 train_acc: 0.860\n",
-      "Epoch: 015/020 cost: 0.358649362 train_acc: 0.920\n",
+      "Epoch: 000/020 cost: 1.177624745 train_acc: 0.800\n",
+      "Epoch: 005/020 cost: 0.441227413 train_acc: 0.940\n",
+      "Epoch: 010/020 cost: 0.378851739 train_acc: 0.930\n",
+      "Epoch: 015/020 cost: 0.356245805 train_acc: 0.870\n",
       "Optimization Finished!\n",
       "Test Accuracy: 0.911\n"
      ]
@@ -143,7 +149,7 @@
    ],
    "source": [
     "for epoch in range(training_epochs):\n",
-    "    avg_cost = 0.\n",
+    "    sum_cost = 0.\n",
     "    num_batch = int(mnist.train.num_examples/batch_size)\n",
     "    # Loop over all batches\n",
     "    for i in range(num_batch): \n",
@@ -151,20 +157,19 @@
     "        batch_xs = trainimg[randidx, :]\n",
     "        batch_ys = trainlabel[randidx, :]                \n",
     "        # Fit training using batch data\n",
-    "        sess.run(optm, feed_dict={x: batch_xs, y: batch_ys})\n",
+    "        feeds = {x: batch_xs, y: batch_ys}\n",
+    "        sess.run(optm, feed_dict=feeds)\n",
     "        # Compute average loss\n",
-    "        avg_cost += sess.run(cost, feed_dict={x: batch_xs, y: batch_ys})/num_batch\n",
-    "\n",
+    "        sum_cost += sess.run(cost, feed_dict=feeds)\n",
+    "    avg_cost = sum_cost / num_batch\n",
     "    # Display logs per epoch step\n",
     "    if epoch % display_step == 0:\n",
     "        train_acc = sess.run(accr, feed_dict={x: batch_xs, y: batch_ys})\n",
     "        print (\"Epoch: %03d/%03d cost: %.9f train_acc: %.3f\" \n",
     "               % (epoch, training_epochs, avg_cost, train_acc))\n",
-    "\n",
     "print (\"Optimization Finished!\")\n",
     "\n",
     "# Test model\n",
-    "# Calculate accuracy\n",
     "test_acc = sess.run(accr, feed_dict={x: testimg, y: testlabel})\n",
     "print ((\"Test Accuracy: %.3f\") % (test_acc))"
    ]
