--- a/notebooks/vis_mlp_mnist.ipynb
+++ b/notebooks/vis_mlp_mnist.ipynb
@@ -8,13 +8,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Import packages"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -61,15 +54,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Network ready\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Parameters\n",
     "learning_rate   = 0.001\n",
@@ -101,8 +86,25 @@
     "        'b3': tf.Variable(tf.random_normal([n_hidden_3])),\n",
     "        'b4': tf.Variable(tf.random_normal([n_hidden_4])),\n",
     "        'out': tf.Variable(tf.random_normal([n_classes]))\n",
-    "    }\n",
-    "\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Network ready\n"
+     ]
+    }
+   ],
+   "source": [
     "# Create model\n",
     "def multilayer_perceptron(_X, _weights, _biases, _keep_prob):\n",
     "    with tf.variable_scope(\"MLP_LAYER_1\"):\n",
@@ -130,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -170,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -206,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -217,20 +219,20 @@
      "output_type": "stream",
      "text": [
       "Start!\n",
-      "Epoch: 000/010 cost: 0.456668414\n",
-      " Training accuracy: 0.950\n",
+      "Epoch: 000/010 cost: 0.482250802\n",
+      " Training accuracy: 0.960\n",
       " Test accuracy: 0.934\n",
-      "Epoch: 002/010 cost: 0.114907353\n",
-      " Training accuracy: 0.980\n",
-      " Test accuracy: 0.966\n",
-      "Epoch: 004/010 cost: 0.072722287\n",
+      "Epoch: 002/010 cost: 0.116960060\n",
+      " Training accuracy: 0.950\n",
+      " Test accuracy: 0.964\n",
+      "Epoch: 004/010 cost: 0.074551024\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.973\n",
+      "Epoch: 006/010 cost: 0.052462111\n",
       " Training accuracy: 0.980\n",
       " Test accuracy: 0.973\n",
-      "Epoch: 006/010 cost: 0.051551444\n",
+      "Epoch: 008/010 cost: 0.040384937\n",
       " Training accuracy: 0.990\n",
-      " Test accuracy: 0.975\n",
-      "Epoch: 008/010 cost: 0.039778697\n",
-      " Training accuracy: 0.980\n",
       " Test accuracy: 0.976\n",
       "Optimization Finished!\n"
      ]
